# personal_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/agent/: __init__.py  graph.py  state.py
backend/agent/nodes/: __init__.py  reason.py  respond.py  retrieve.py  understand.py
backend/agent/tools/: __init__.py  add_knowledge.py  folder_structure.py  graph_query.py  vector_search.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  chat.py  graph.py  knowledge.py  search.py  sync.py
backend/extraction/: __init__.py  pipeline.py  watcher.py
backend/extraction/extractors/: __init__.py  llm_extractor.py  nlp_extractor.py
backend/extraction/parsers/: __init__.py  docx.py  frontmatter.py  image.py  markdown.py  pdf.py  pptx.py
backend/knowledge/: __init__.py  graph_store.py  models.py  vector_store.py
docker/: docker-compose.yml
docs/: QUICKSTART.md
frontend/: app.js  index.html
scripts/: init_extraction.py  serve_frontend.py  test_agent.py
