[project]
name = "personal-agent"
version = "0.1.0"
description = "Personal Knowledge Management AI Agent for Obsidian vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",

    # Agent Framework
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",

    # Database & Storage
    "neo4j>=5.17.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",

    # NLP
    "spacy>=3.7.2",

    # Document Parsing
    "mistune>=3.0.2",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",

    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "watchdog>=3.0.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
